--- a/s02/moon_202209_s02.ipynb
+++ b/s02/moon_202209_s02.ipynb
@@ -353,16 +353,262 @@
     "# making animation\n",
     "anim = matplotlib.animation.ArtistAnimation (fig, frames, interval=50)\n",
     "\n",
-    "# showing animation\n",
+    "#showing animation\n",
     "#matplotlib.pyplot.show ()\n",
     "import IPython.display\n",
     "IPython.display.HTML (anim.to_html5_video ())"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d4294ba0-31c2-45a3-8a5c-96105508e0e4",
+   "metadata": {},
+   "source": [
+    "If above cell does not work, try following."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "626106be-1347-46f3-954a-a2c7148e9bb3",
+   "id": "e7887d27-3e15-47a7-b84f-a5328135f508",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/usr/pkg/bin/python3.9\n",
+    "\n",
+    "#\n",
+    "# Time-stamp: <2022/09/22 11:44:26 (CST) daisuke>\n",
+    "#\n",
+    "\n",
+    "# importing astropy module\n",
+    "import astropy\n",
+    "import astropy.coordinates\n",
+    "import astropy.time\n",
+    "import astropy.units\n",
+    "\n",
+    "# importing matplotlib module\n",
+    "import matplotlib.pyplot\n",
+    "import matplotlib.animation\n",
+    "\n",
+    "# units\n",
+    "u_hr = astropy.units.hour\n",
+    "u_km = astropy.units.km\n",
+    "\n",
+    "# setting for solar system ephemeris\n",
+    "astropy.coordinates.solar_system_ephemeris.set ('jpl')\n",
+    "\n",
+    "# time to start the simulation: t0 = 2022-09-01T00:00:00 (UTC)\n",
+    "t0 = astropy.time.Time ('2022-09-01T00:00:00', format='isot', scale='utc')\n",
+    "\n",
+    "# number of steps\n",
+    "n = 2400\n",
+    "\n",
+    "# making an empty list for animation\n",
+    "frames = []\n",
+    "\n",
+    "# making a fig object using matplot.pyplot.figure function\n",
+    "fig = matplotlib.pyplot.figure ()\n",
+    "    \n",
+    "# making an axes object using object-oriented interface\n",
+    "ax = fig.add_subplot (111)\n",
+    "\n",
+    "for i in range (n):\n",
+    "    # time t\n",
+    "    t = t0 + i * u_hr\n",
+    "\n",
+    "    # getting positions of Earth and Moon\n",
+    "    earth = astropy.coordinates.get_body_barycentric ('earth', t)\n",
+    "    moon  = astropy.coordinates.get_body_barycentric ('moon', t)\n",
+    "\n",
+    "    # calculation of position of the Moon relative to the Earth\n",
+    "    moon_rel_x = (moon.x - earth.x) / u_km\n",
+    "    moon_rel_y = (moon.y - earth.y) / u_km\n",
+    "\n",
+    "    # settings for plot\n",
+    "    ax.set_aspect ('equal')\n",
+    "    ax.set_xlim (-4.7*10**5, +4.7*10**5)\n",
+    "    ax.set_ylim (-4.7*10**5, +4.7*10**5)\n",
+    "    ax.set_xlabel (\"X [km]\")\n",
+    "    ax.set_ylabel (\"Y [km]\")\n",
+    "    ax.set_title (\"Position of the Moon relative to the Earth\")\n",
+    "    \n",
+    "    # plotting grid\n",
+    "    grid0, = ax.plot ([-10**6, +10**6], [0.0*10**5, 0.0*10**5], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid1, = ax.plot ([-10**6, +10**6], [-2.0*10**5, -2.0*10**5], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid2, = ax.plot ([-10**6, +10**6], [-4.0*10**5, -4.0*10**5], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid3, = ax.plot ([-10**6, +10**6], [+2.0*10**5, +2.0*10**5], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid4, = ax.plot ([-10**6, +10**6], [+4.0*10**5, +4.0*10**5], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid5, = ax.plot ([0.0*10**5, 0.0*10**5], [-10**6, +10**6], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid6, = ax.plot ([-2.0*10**5, -2.0*10**5], [-10**6, +10**6], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid7, = ax.plot ([-4.0*10**5, -4.0*10**5], [-10**6, +10**6], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid8, = ax.plot ([+2.0*10**5, +2.0*10**5], [-10**6, +10**6], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid9, = ax.plot ([+4.0*10**5, +4.0*10**5], [-10**6, +10**6], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    \n",
+    "    # plotting the Earth\n",
+    "    earth, = ax.plot (0.0, 0.0, marker='o', markersize=25, \\\n",
+    "                      color='blue', label='Earth')\n",
+    "    text_earth = ax.text (0.0, -8.0*10**4, f'Earth')\n",
+    "\n",
+    "    # plotting the Moon\n",
+    "    moon,  = ax.plot (moon_rel_x, moon_rel_y, marker='o', markersize=15, \\\n",
+    "                      color='orange', label='Moon')\n",
+    "    text_moon = ax.text (moon_rel_x, moon_rel_y - 8.0*10**4, f'Moon')\n",
+    "\n",
+    "    # plotting the time\n",
+    "    text_time  = ax.text (-4.55*10**5, -4.55*10**5, f'Date/Time: {t} (UTC)')\n",
+    "\n",
+    "    # appending the plot to animation\n",
+    "    frames.append ([earth, text_earth, moon, text_moon, text_time, \\\n",
+    "                    grid0, grid1, grid2, grid3, grid4, \\\n",
+    "                    grid5, grid6, grid7, grid8, grid9])\n",
+    "\n",
+    "# making animation\n",
+    "anim = matplotlib.animation.ArtistAnimation (fig, frames, interval=50)\n",
+    "\n",
+    "# showing animation\n",
+    "#matplotlib.pyplot.show ()\n",
+    "\n",
+    "# saving file\n",
+    "anim.save ('moon_motion.gif')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87a3856f-2490-437f-8cac-e85d8aa78924",
+   "metadata": {},
+   "source": [
+    "Or, you may try following."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92d47caf-c498-455d-832c-7f4de4622cce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/usr/pkg/bin/python3.9\n",
+    "\n",
+    "#\n",
+    "# Time-stamp: <2022/09/22 11:47:11 (CST) daisuke>\n",
+    "#\n",
+    "\n",
+    "# importing astropy module\n",
+    "import astropy\n",
+    "import astropy.coordinates\n",
+    "import astropy.time\n",
+    "import astropy.units\n",
+    "\n",
+    "# importing matplotlib module\n",
+    "import matplotlib.pyplot\n",
+    "import matplotlib.animation\n",
+    "\n",
+    "# units\n",
+    "u_hr = astropy.units.hour\n",
+    "u_km = astropy.units.km\n",
+    "\n",
+    "# setting for solar system ephemeris\n",
+    "astropy.coordinates.solar_system_ephemeris.set ('jpl')\n",
+    "\n",
+    "# time to start the simulation: t0 = 2022-09-01T00:00:00 (UTC)\n",
+    "t0 = astropy.time.Time ('2022-09-01T00:00:00', format='isot', scale='utc')\n",
+    "\n",
+    "# number of steps\n",
+    "n = 2400\n",
+    "\n",
+    "# making an empty list for animation\n",
+    "frames = []\n",
+    "\n",
+    "# making a fig object using matplot.pyplot.figure function\n",
+    "fig = matplotlib.pyplot.figure ()\n",
+    "    \n",
+    "# making an axes object using object-oriented interface\n",
+    "ax = fig.add_subplot (111)\n",
+    "\n",
+    "for i in range (n):\n",
+    "    # time t\n",
+    "    t = t0 + i * u_hr\n",
+    "\n",
+    "    # getting positions of Earth and Moon\n",
+    "    earth = astropy.coordinates.get_body_barycentric ('earth', t)\n",
+    "    moon  = astropy.coordinates.get_body_barycentric ('moon', t)\n",
+    "\n",
+    "    # calculation of position of the Moon relative to the Earth\n",
+    "    moon_rel_x = (moon.x - earth.x) / u_km\n",
+    "    moon_rel_y = (moon.y - earth.y) / u_km\n",
+    "\n",
+    "    # settings for plot\n",
+    "    ax.set_aspect ('equal')\n",
+    "    ax.set_xlim (-4.7*10**5, +4.7*10**5)\n",
+    "    ax.set_ylim (-4.7*10**5, +4.7*10**5)\n",
+    "    ax.set_xlabel (\"X [km]\")\n",
+    "    ax.set_ylabel (\"Y [km]\")\n",
+    "    ax.set_title (\"Position of the Moon relative to the Earth\")\n",
+    "    \n",
+    "    # plotting grid\n",
+    "    grid0, = ax.plot ([-10**6, +10**6], [0.0*10**5, 0.0*10**5], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid1, = ax.plot ([-10**6, +10**6], [-2.0*10**5, -2.0*10**5], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid2, = ax.plot ([-10**6, +10**6], [-4.0*10**5, -4.0*10**5], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid3, = ax.plot ([-10**6, +10**6], [+2.0*10**5, +2.0*10**5], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid4, = ax.plot ([-10**6, +10**6], [+4.0*10**5, +4.0*10**5], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid5, = ax.plot ([0.0*10**5, 0.0*10**5], [-10**6, +10**6], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid6, = ax.plot ([-2.0*10**5, -2.0*10**5], [-10**6, +10**6], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid7, = ax.plot ([-4.0*10**5, -4.0*10**5], [-10**6, +10**6], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid8, = ax.plot ([+2.0*10**5, +2.0*10**5], [-10**6, +10**6], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    grid9, = ax.plot ([+4.0*10**5, +4.0*10**5], [-10**6, +10**6], \\\n",
+    "                      linestyle='--', color='gray', alpha=0.3)\n",
+    "    \n",
+    "    # plotting the Earth\n",
+    "    earth, = ax.plot (0.0, 0.0, marker='o', markersize=25, \\\n",
+    "                      color='blue', label='Earth')\n",
+    "    text_earth = ax.text (0.0, -8.0*10**4, f'Earth')\n",
+    "\n",
+    "    # plotting the Moon\n",
+    "    moon,  = ax.plot (moon_rel_x, moon_rel_y, marker='o', markersize=15, \\\n",
+    "                      color='orange', label='Moon')\n",
+    "    text_moon = ax.text (moon_rel_x, moon_rel_y - 8.0*10**4, f'Moon')\n",
+    "\n",
+    "    # plotting the time\n",
+    "    text_time  = ax.text (-4.55*10**5, -4.55*10**5, f'Date/Time: {t} (UTC)')\n",
+    "\n",
+    "    # appending the plot to animation\n",
+    "    frames.append ([earth, text_earth, moon, text_moon, text_time, \\\n",
+    "                    grid0, grid1, grid2, grid3, grid4, \\\n",
+    "                    grid5, grid6, grid7, grid8, grid9])\n",
+    "\n",
+    "# making animation\n",
+    "anim = matplotlib.animation.ArtistAnimation (fig, frames, interval=50)\n",
+    "\n",
+    "# showing animation\n",
+    "#matplotlib.pyplot.show ()\n",
+    "\n",
+    "# saving file\n",
+    "anim.save ('moon_motion.mp4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22ef2ad8-fa03-45d7-a312-44d709560f11",
    "metadata": {},
    "outputs": [],
    "source": []
